force-app/main/default/objects/Lookup_Field_Mapping__c/Lookup_Field_Mapping__c.object-meta.xml
<CustomObject>
    <label>Lookup Field Mapping</label>
    <nameField>
        <label>Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lookup Field Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>