force-app/main/default/objects/Lookup_Field_Mapping__c/fields/Destination_Field__c.field-meta.xml
<CustomField>
    <fullName>Destination_Field__c</fullName>
    <label>Destination Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>