force-app/main/default/objects/Lookup_Field_Mapping__c/fields/Is_Upgraded__c.field-meta.xml
<CustomField>
    <fullName>Is_Upgraded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Upgraded</label>
    <type>Checkbox</type>
</CustomField>