force-app/main/default/objects/Lookup_Field_Mapping__c/fields/Lookup_Mapping_Match_Type__c.field-meta.xml
<CustomField>
    <fullName>Lookup_Mapping_Match_Type__c</fullName>
    <label>Lookup Mapping Match Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Earliest Created</fullName>
            </value>
            <value>
                <fullName>Latest Created</fullName>
            </value>
            <value>
                <fullName>Latest Modified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>