force-app/main/default/objects/Lookup_Field_Mapping__c/fields/Match_Field__c.field-meta.xml
<CustomField>
    <fullName>Match_Field__c</fullName>
    <label>Match Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>