force-app/main/default/objects/Lookup_Field_Mapping__c/fields/Match_Object__c.field-meta.xml
<CustomField>
    <fullName>Match_Object__c</fullName>
    <label>Match Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>