force-app/main/default/objects/Lookup_Field_Mapping__c/fields/Parent_Id__c.field-meta.xml
<CustomField>
    <fullName>Parent_Id__c</fullName>
    <label>Email Services Function</label>
    <referenceTo>Email_Services_Function__c</referenceTo>
    <relationshipLabel>Lookup Field Mappings</relationshipLabel>
    <relationshipName>Lookup_Field_Mappings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>